added: update-method, api
